fix safari flex gap css prop in CircuitInfoPanel

--- a/src/components/market/CircuitInfoPanel/CircuitInfoPanel.module.scss
+++ b/src/components/market/CircuitInfoPanel/CircuitInfoPanel.module.scss
@@ -6,8 +6,11 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  gap: 40px;
   overflow-x: auto;
+
+  > * + * {
+    margin-left: 40px;
+  }
 
   @include hideScrollbar;
 }
